<resources>
    <string name="app_name" translatable="false">Recipe Store Pro</string>
    <string name="welcoming_picture" translatable="false">welcoming picture</string>
    <string name="search_recipe">Search recipe</string>
    <string name="recently_added">Recently added</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="to_buy_list">To buy list</string>
    <string name="add">Add</string>
    <string name="timer">Timer</string>
    <string name="settings">Settings</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="create_new_recipe">Create new recipe</string>
    <string name="save_recipe_from_the_web">Save recipe from the Web</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="to_buy_list2">To buy list:</string>
    <string name="title">Title</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="start_cooking">Start cooking!</string>

    <string name="email">Email\n</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in">Log In</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>

    <string name="log_out">Log out</string>
    <string name="no_internet">No Internet connection</string>
    <string name="account_created">Account created successfully!</string>
    <string name="logged_in">Logged in successfully!</string>
    <string name="problem">Some problem occurred!</string>
    <string name="not_logged_in">User is not logged in!</string>
    <string name="logged_out">Logged out successfully!</string>
    <string name="fields_empty">Some fields are empty!</string>
    <string name="email_error">This email is not valid!</string>
    <string name="passwords_mismatching">Passwords should be the same!</string>
    <string name="password_error">Passwords length should be between 6 and 20 symbols!</string>

    <string name="recipe_saved_locally">Recipe is saved locally!</string>
    <string name="recipe_saved">Recipe is saved!</string>
    <string name="recipe_updated_locally">Recipe is updated locally!</string>
    <string name="recipe_updated">Recipe is updated!</string>
    <string name="fav_stat_updated">Favorite status is updated!</string>">
    <string name="recipe_deleted">Recipe deleted!</string>
    <string name="undo">Undo</string>
    <string name="no_recipes_found">Nothing found</string>
    <string name="email1">Email</string>
    <string name="feedback">Feedback</string>
    <string name="found_bug">Found a bug or have a suggestion? Write a report ></string>
    <string name="send_a_message">Send a message</string>
    <string name="no_browser_found">No browser found :(</string>
    <string name="no_email_found">No email app found :(</string>
    <string name="feedback_subject">Recipe Store Pro Feedback</string>

</resources>