<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_newrecipe_style"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_new_recipe"
        android:textSize="16sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/saveFromWebOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/download_icon"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/save_recipe_from_the_web"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/createRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/create_icon"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/create_new_recipe"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>