<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/Animation.Design.BottomSheetDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_new_recipe"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/saveFromWebOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/save_recipe_from_the_web"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_download" />

        <TextView
            android:id="@+id/createRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/create_new_recipe"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_create" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>