<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/customToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="10dp"
        app:navigationIcon="@drawable/ic_arrow_back">

        <ImageView
            android:id="@+id/saveButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_checkmark"
            android:visibility="visible"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/favoriteButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_star_empty"
            tools:ignore="ContentDescription,TouchTargetSizeCheck" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/custom_add_new_recipe_style"
                android:elevation="15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="top"
                    android:hint="@string/title"
                    android:importantForAutofill="no"
                    android:minHeight="48dp"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:textSize="16sp"
                    android:visibility="visible"
                    tools:text="14.09.2024" />

                <EditText
                    android:id="@+id/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="top"
                    android:hint="@string/ingredients"
                    android:importantForAutofill="no"
                    android:lineSpacingMultiplier="1.2"
                    android:minHeight="48dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/custom_add_new_recipe_style"
                android:elevation="15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="top"
                    android:hint="@string/instructions"
                    android:importantForAutofill="no"
                    android:lineSpacingMultiplier="1.2"
                    android:minHeight="48dp"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>